; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/bna/extr_bna_enet.c_bna_ioceth_disable.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/bna/extr_bna_enet.c_bna_ioceth_disable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bna_ioceth = type { %struct.TYPE_2__*, i32, i32 (i32)* }
%struct.TYPE_2__ = type { i32 }

@BNA_SOFT_CLEANUP = common dso_local global i32 0, align 4
@IOCETH_E_DISABLE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @bna_ioceth_disable(%struct.bna_ioceth* %0, i32 %1) #0 {
  %3 = alloca %struct.bna_ioceth*, align 8
  %4 = alloca i32, align 4
  store %struct.bna_ioceth* %0, %struct.bna_ioceth** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = load i32, i32* @BNA_SOFT_CLEANUP, align 4
  %7 = icmp eq i32 %5, %6
  br i1 %7, label %8, label %15

8:                                                ; preds = %2
  %9 = load %struct.bna_ioceth*, %struct.bna_ioceth** %3, align 8
  %10 = getelementptr inbounds %struct.bna_ioceth, %struct.bna_ioceth* %9, i32 0, i32 0
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @bnad_cb_ioceth_disabled(i32 %13)
  br label %28

15:                                               ; preds = %2
  %16 = load %struct.bna_ioceth*, %struct.bna_ioceth** %3, align 8
  %17 = getelementptr inbounds %struct.bna_ioceth, %struct.bna_ioceth* %16, i32 0, i32 2
  store i32 (i32)* @bnad_cb_ioceth_disabled, i32 (i32)** %17, align 8
  %18 = load %struct.bna_ioceth*, %struct.bna_ioceth** %3, align 8
  %19 = getelementptr inbounds %struct.bna_ioceth, %struct.bna_ioceth* %18, i32 0, i32 0
  %20 = load %struct.TYPE_2__*, %struct.TYPE_2__** %19, align 8
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = load %struct.bna_ioceth*, %struct.bna_ioceth** %3, align 8
  %24 = getelementptr inbounds %struct.bna_ioceth, %struct.bna_ioceth* %23, i32 0, i32 1
  store i32 %22, i32* %24, align 8
  %25 = load %struct.bna_ioceth*, %struct.bna_ioceth** %3, align 8
  %26 = load i32, i32* @IOCETH_E_DISABLE, align 4
  %27 = call i32 @bfa_fsm_send_event(%struct.bna_ioceth* %25, i32 %26)
  br label %28

28:                                               ; preds = %15, %8
  ret void
}

declare dso_local i32 @bnad_cb_ioceth_disabled(i32) #1

declare dso_local i32 @bfa_fsm_send_event(%struct.bna_ioceth*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
